UPDATE css ticket

--- a/src/pages/ticket/ticket.scss
+++ b/src/pages/ticket/ticket.scss
@@ -1,4 +1,6 @@
 page-ticket {
+
+    .content{
     
     .item[no-lines].itemContent { 
         border-bottom: 1px solid grey; 
@@ -25,4 +27,5 @@ page-ticket {
           
         
     }
+}
 }
