UPDATE page membership

--- a/src/pages/membership/membership.scss
+++ b/src/pages/membership/membership.scss
@@ -1,5 +1,6 @@
 page-membership {
     .page-header {
+        z-index:10;
         height: 100px;
         background-color: lightcoral;
         position: fixed;
