--- a/src/pages/convertclick/convertclick.scss
+++ b/src/pages/convertclick/convertclick.scss
@@ -27,4 +27,9 @@ page-convertclick {
             
         }
     }
+    .played{
+        border: 1px solid #BEBEBE;
+        padding-left: 20px;
+    }
+
 }
