--- a/src/pages/web3/web3.scss
+++ b/src/pages/web3/web3.scss
@@ -1,8 +1,9 @@
 page-web3 {
     #br {
-        width: 50%;
+        width: 200px;
+        height: 200px;
     }
     #w {
-        width: 60%;
+        width: 60px;
     }
 }
