--- a/src/pages/game-detail/game-detail.scss
+++ b/src/pages/game-detail/game-detail.scss
@@ -2,7 +2,7 @@ page-game-detail {
     .gameBanner{
         text-align:center;
         background-color: lightgray;
-        height:150px;
+        height:25vh;
 
     }
     .bannerButton{
