Edit Description/Link/How to play
Signed-off-by: Kritsana <tragoolphrom@gmail.com>

--- a/src/pages/game-detail/game-detail.scss
+++ b/src/pages/game-detail/game-detail.scss
@@ -17,4 +17,13 @@ page-game-detail {
             
         }
     }
+    
+    .page-footer {
+        height: 50px;
+        background-color: lightcoral;
+        position: fixed;
+        left: 0px;
+        bottom: 0px;
+        right: 0px;
+    }    
 }
