--- a/src/pages/gameresult/gameresult.scss
+++ b/src/pages/gameresult/gameresult.scss
@@ -2,5 +2,14 @@ page-gameresult {
     #site-footer {
         height: 50px;
         background: #FDD5D7;
-        }
+    }
+    
+    .page-footer {
+        height: 50px;
+        background-color: lightcoral;
+        position: fixed;
+        left: 0px;
+        bottom: 0px;
+        right: 0px;
+    }    
 }
