--- a/src/pages/membership/membership.scss
+++ b/src/pages/membership/membership.scss
@@ -2,7 +2,7 @@ page-membership {
     .page-header {
         z-index:10;
         height: 110px;
-        background-color: gainsboro;
+        background-color: lightcoral;
         position: fixed;
         left: 0px;
         top: 55px;
