--- a/src/pages/pre-playgame/pre-playgame.scss
+++ b/src/pages/pre-playgame/pre-playgame.scss
@@ -19,10 +19,12 @@ page-pre-playgame {
     .game-title{
         font-weight: bold;
         font-size: 1.3em;
+        text-align: left
     }
     
     .ticket-title{
         font-style:italic;
+        text-align: left
     }
 
     .play-title{
