edit mycollect and add home button in page lotto game,win,lose.result

--- a/src/pages/mycollect/mycollect.scss
+++ b/src/pages/mycollect/mycollect.scss
@@ -1,3 +1,16 @@
 page-mycollect {
-
+    .b {
+        border: 1px solid black;
+        margin: 1px;
+        font-size: 10px;
+        font: bold;
+    }
+    .alpha{
+        opacity: 0.1;
+        filter: alpha(opacity=50);
+    }
+    img{
+        height: 10px;
+        width: 50px;
+    }
 }
