--- a/src/pages/sell/sell.scss
+++ b/src/pages/sell/sell.scss
@@ -1,11 +1,25 @@
 page-sell {
 
+    .page-header {
+        position: fixed;
+        left: 0px;
+        top: 56px;
+        right: 0px;
+        z-index:10;
+    }
+
     .page-footer {
         height: 50px;
-        background-color: lightcoral;
+        background-color: #990000;
         position: fixed;
         left: 0px;
         bottom: 0px;
         right: 0px;
+    }
+    .page-button{
+        background-color: #990000;
+        border-right: 1px solid black;
+        border-top: 1px solid black;
+        border-bottom: 1px solid black;
     }
 }
