--- a/src/app/app.scss
+++ b/src/app/app.scss
@@ -16,5 +16,18 @@
 // automatically applied to the <body> element in the app.
 .alertCustomCss .alert-message {
     padding-left: 13%;
+}
+@font-face {
+    font-family: "Prompt";
+    src: url("../assets/fonts/Prompt/Prompt-Regular.woff2") format("woff2");
+  }
+  
+  @font-face {
+    font-family: "Prompt";
+    src: url("../assets/fonts/Prompt/Prompt-Regular-TH.woff2") format("woff2");
+  }
+
+  *{
+font-family: Prompt;
 
   }
