--- a/src/theme/variables.scss
+++ b/src/theme/variables.scss
@@ -39,9 +39,9 @@ $colors: (
   danger:     #f53d3d,
   light:      #f4f4f4,
   dark:       #222,
-  pink:       #FDD5D7,
+  pinks:       #FDD5D7,
   hotpink:    rgb(248, 124, 130),
-  pinks:       #990000,
+  pink:       #990000,
 
 );
 
