--- a/src/pages/trade/trade.scss
+++ b/src/pages/trade/trade.scss
@@ -11,7 +11,7 @@ page-trade {
     
     .page-footer {
         height: 50px;
-        background-color:#990000;
+        background-color:lightcoral;
         position: fixed;
         left: 0px;
         bottom: 0px;
