--- a/src/pages/sell/sell.scss
+++ b/src/pages/sell/sell.scss
@@ -10,7 +10,7 @@ page-sell {
 
     .page-footer {
         height: 50px;
-        background-color: #990000;
+        background-color: lightcoral;
         position: fixed;
         left: 0px;
         bottom: 0px;
