add scratch game

--- a/src/pages/lottogame/lottogame.scss
+++ b/src/pages/lottogame/lottogame.scss
@@ -7,4 +7,12 @@ page-lottogame {
         bottom: 0px;
         right: 0px;
     }
+    .b {
+        border: 1px solid black;
+        margin: 5px;
+        font-size: 10px;
+        font: bold;
+        background-color: black;
+
+    }
 }
