--- a/src/pages/membership/membership.scss
+++ b/src/pages/membership/membership.scss
@@ -7,5 +7,13 @@ page-membership {
         top: 44px;
         right: 0px;
     }
-    
+    .btn{
+
+    }
+    // .color-btn:hover{
+    //     background-color:#FF9900;
+    //     color:black;
+    //     font-weight: bold;
+    // }
+
 }
