add slot game result page

--- a/src/pages/gameresultslot/gameresultslot.scss
+++ b/src/pages/gameresultslot/gameresultslot.scss
@@ -1,4 +1,4 @@
-page-gameresult {
+page-gameresultslot {
     #site-footer {
         height: 50px;
         background: #FDD5D7;
@@ -12,12 +12,4 @@ page-gameresult {
         bottom: 0px;
         right: 0px;
     }
-    .b {
-        border: 1px solid black;
-        margin: 5px;
-        font-size: 10px;
-        font: bold;
-        background-color: black;
-
-    }    
 }
