--- a/src/pages/home/home.scss
+++ b/src/pages/home/home.scss
@@ -1,6 +1,7 @@
 page-home {
     .page-footer {
-        height: 80px;
+        height: 450%;
+        width: 450%;
         position: fixed;
         left: 0px;
         bottom: 0px;
