add modal coolect trade

--- a/src/pages/mycollect/mycollect.scss
+++ b/src/pages/mycollect/mycollect.scss
@@ -1,16 +1,15 @@
 page-mycollect {
     .b {
-        border: 1px solid black;
-        margin: 1px;
-        font-size: 10px;
+        border: 0px solid black;
+        margin: 0px;
         font: bold;
     }
     .alpha{
         opacity: 0.1;
         filter: alpha(opacity=50);
     }
-    img{
-        height: 10px;
-        width: 50px;
-    }
+    // img{
+    //     height: 10px;
+    //     width: 50px;
+    // }
 }
