--- a/src/theme/variables.scss
+++ b/src/theme/variables.scss
@@ -41,7 +41,7 @@ $colors: (
   dark:       #222,
   pink:      lightcoral,
   hotpink:    rgb(248, 124, 130),
-  pinks:       #990000,
+  mana:       #A81C07,
 
 );
 
