--- a/src/pages/trade-collect-sell-modal/trade-collect-sell-modal.scss
+++ b/src/pages/trade-collect-sell-modal/trade-collect-sell-modal.scss
@@ -1,3 +1,9 @@
 page-trade-collect-sell-modal {
-
+    .page-footer {
+        height: 50px;
+        position: fixed;
+        left: 0px;
+        bottom: 0px;
+        right: 0px;
+    }
 }
