--- a/src/pages/collection-trade/collection-trade.scss
+++ b/src/pages/collection-trade/collection-trade.scss
@@ -11,7 +11,7 @@ page-collection-trade {
     
     .page-footer {
         height: 50px;
-        background-color:lightcoral;
+        background-color:#A81C07;
         position: fixed;
         left: 0px;
         bottom: 0px;
