--- a/src/pages/lottogame/lottogame.scss
+++ b/src/pages/lottogame/lottogame.scss
@@ -1,7 +1,7 @@
 page-lottogame {
     .page-footer {
         height: 50px;
-        background-color: lightcoral;
+        background-color: #A81C07;
         position: fixed;
         left: 0px;
         bottom: 0px;
