--- a/src/pages/ticket/ticket.scss
+++ b/src/pages/ticket/ticket.scss
@@ -34,7 +34,7 @@ page-ticket {
 
     .page-footer {
         height: 50px;
-        background-color: lightcoral;
+        background-color: #A81C07;
         position: fixed;
         left: 0px;
         bottom: 0px;
