--- a/src/pages/convertclick-b/convertclick-b.scss
+++ b/src/pages/convertclick-b/convertclick-b.scss
@@ -29,7 +29,7 @@ page-convertclick-b {
 
     .page-footer {
         height: 50px;
-        background-color: lightcoral;
+        background-color: #A81C07;
         position: fixed;
         left: 0px;
         bottom: 0px;
