--- a/src/pages/trade/trade.scss
+++ b/src/pages/trade/trade.scss
@@ -8,7 +8,7 @@ page-trade {
     }
     .page-footer {
         height: 50px;
-        background-color:lightcoral;
+        background-color:#A81C07;
         position: fixed;
         left: 0px;
         bottom: 0px;
