--- a/src/pages/game-detail-b/game-detail-b.scss
+++ b/src/pages/game-detail-b/game-detail-b.scss
@@ -20,11 +20,8 @@ page-game-detail-b  {
     
     .page-footer {
         height: 50px;
-        background-color: lightcoral;
-        position: fixed;
-        left: 0px;
-        bottom: 0px;
-        right: 0px;
+        background-color: #A81C07;
+    
     }    
 }
 
