--- a/src/pages/slotgame/slotgame.scss
+++ b/src/pages/slotgame/slotgame.scss
@@ -1,11 +1,8 @@
 page-slotgame {
     .page-footer {
         height: 50px;
-        background-color: lightcoral;
-        position: fixed;
-        left: 0px;
-        bottom: 0px;
-        right: 0px;
+        background-color: #A81C07;
+
     }
     .b {
         border: 1px solid black;
