--- a/src/pages/trade/trade.scss
+++ b/src/pages/trade/trade.scss
@@ -7,12 +7,9 @@ page-trade {
         z-index:10;
     }
     .page-footer {
-        height: 50px;
+      //  height: 50px;
         background-color:#A81C07;
-        position: fixed;
-        left: 0px;
-        bottom: 0px;
-        right: 0px;
+   
     }
     .page-button{
         background-color: #990000;
