--- a/src/pages/game-detail/game-detail.scss
+++ b/src/pages/game-detail/game-detail.scss
@@ -20,10 +20,7 @@ page-game-detail {
     
     .page-footer {
         height: 50px;
-        background-color: lightcoral;
-        position: fixed;
-        left: 0px;
-        bottom: 0px;
-        right: 0px;
+        background-color: #A81C07;
+ 
     }    
 }
