--- a/src/pages/gameresult/gameresult.scss
+++ b/src/pages/gameresult/gameresult.scss
@@ -6,11 +6,7 @@ page-gameresult {
     
     .page-footer {
         height: 50px;
-        background-color: lightcoral;
-        position: fixed;
-        left: 0px;
-        bottom: 0px;
-        right: 0px;
+        background-color: #A81C07;
     }
     .b {
         margin: 5px;
