--- a/src/pages/gameresultslot/gameresultslot.scss
+++ b/src/pages/gameresultslot/gameresultslot.scss
@@ -6,10 +6,6 @@ page-gameresultslot {
     
     .page-footer {
         height: 50px;
-        background-color: lightcoral;
-        position: fixed;
-        left: 0px;
-        bottom: 0px;
-        right: 0px;
+        background-color: #A81C07;
     }
 }
