--- a/src/pages/pre-play-slot/pre-play-slot.scss
+++ b/src/pages/pre-play-slot/pre-play-slot.scss
@@ -29,4 +29,9 @@ page-pre-play-slot {
         font-weight: bold;
         font-size: 1em;
     }
+    .page-footer {
+        //  height: 50px;
+          background-color:#A81C07;
+     
+      }
 }
