--- a/src/pages/pre-playgame/pre-playgame.scss
+++ b/src/pages/pre-playgame/pre-playgame.scss
@@ -33,4 +33,9 @@ page-pre-playgame {
     }
     
 
+    .page-footer {
+        //  height: 50px;
+          background-color:#A81C07;
+     
+      }
 }
